🔧  Broken links (Portfolio) & Layout issue (Hero)

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -285,7 +285,7 @@ p {
 
 .hero__items-container {
   margin: auto;
-  margin-top: 15rem;
+  margin-top: 12rem;
   width: 80%;
   display: flex;
   align-items: center;
