--- a/styles/scss/partials/_hero.scss
+++ b/styles/scss/partials/_hero.scss
@@ -1,6 +1,6 @@
 .hero__items-container {
     margin: auto;
-    margin-top: 15rem;
+    margin-top: 12rem;
     width: 80%;
     display: flex;
     align-items: center;
